--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "gatsby": "^0.12.6",
     "highlight.js": "^9.6.0",
     "history": "^2.0.2",
+    "hoek": "^5.0.3",
     "js-yaml": "^3.6.0",
     "markdown-it": "^7.0.1",
     "markdown-it-abbr": "^1.0.3",
@@ -16,8 +17,8 @@
     "markdown-it-footnote": "^3.0.1",
     "markdown-it-sub": "^1.0.0",
     "object-assign": "^4.1.0",
-    "react-helmet": "^3.1.0",
     "react-headroom": "^2.1.2",
+    "react-helmet": "^3.1.0",
     "react-responsive-grid": "^0.3.3",
     "react-typography": "^0.12.0",
     "toml-js": "0.0.8",
